2023-11-10  pierre  <pierre@spin.internet-box.ch>

	* src/website/assets/compare.js: fix fieldset and make it disabled
	automatically if only one field is present
