@@ -4,15 +4,19 @@
     "html-validate": "^7.13.2",
     "html-validator": "^6.0.1",
     "html-validator-cli": "^7.0.1",
-    "npm": "^9.8.1",
+    "node": "^21.1.0",
+    "npm": "^10.2.3",
     "plotly": "^1.0.6",
-    "prettier": "^3.0.3",
     "sass": "^1.58.0",
     "typescript-language-server": "^3.3.2"
   },
   "devDependencies": {
+    "eslint": "^8.53.0",
     "flow": "^0.2.3",
     "flow-remove-types": "^2.216.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
+    "prettier": "^3.0.3",
     "pyright": "^1.1.327",
     "standard": "^17.1.0",
     "w3c-html-validator": "^1.4.0"
